# slack-status-updater

./: .gitignore  LICENSE  README.md  pyproject.toml
slack_status_updater/: cli.py  config.py  interfaces.py  main.py  slack_client.py
tests/: test_cli.py  test_slack_client.py
